--- a/app/src/main/res/layout/ad_mob_small_template.xml
+++ b/app/src/main/res/layout/ad_mob_small_template.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.appodeal.ads.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -34,7 +34,7 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Store" />
 
-        <ImageView
+        <com.appodeal.ads.NativeIconView
             android:id="@+id/ad_app_icon"
             android:layout_width="70dp"
             android:layout_height="70dp"
@@ -101,4 +101,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</com.google.android.gms.ads.nativead.NativeAdView>
+</com.appodeal.ads.NativeAdView>
