--- a/app/src/main/res/layout/fragment_ad_mob.xml
+++ b/app/src/main/res/layout/fragment_ad_mob.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="24dp"
-    tools:context=".core.ui.AdMobFragment">
+    tools:context=".core.ui.AdFragment">
 
     <TextView
         android:id="@+id/tv_swipe_to_quakes_1"
