Mejoras de accesibilidad

--- a/app/src/main/res/layout/ad_fragment_template.xml
+++ b/app/src/main/res/layout/ad_fragment_template.xml
@@ -25,8 +25,8 @@
 
         <com.appodeal.ads.NativeIconView
             android:id="@+id/ad_app_icon"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:contentDescription="@string/icon_ad_app"
             android:src="@drawable/ic_quakes_shortcut"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -38,9 +38,10 @@
         <TextView
             android:id="@+id/ad_title"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:gravity="center"
+            android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@+id/right_guide"
             app:layout_constraintStart_toStartOf="@+id/left_guide"
             app:layout_constraintTop_toBottomOf="@+id/ad_app_icon"
@@ -51,6 +52,8 @@
             style="?android:attr/ratingBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="false"
+            android:contentDescription="@string/puntaje_estrellas_aplicaci_n_publicidad"
             android:isIndicator="true"
             android:numStars="5"
             android:stepSize="0.5"
@@ -66,6 +69,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:contentDescription="@string/contenido_multimedia_de_publicidad"
             app:layout_constraintBottom_toTopOf="@+id/horizontal_guide"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -96,9 +100,11 @@
         <TextView
             android:id="@+id/ad_body"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginTop="8dp"
+            android:clickable="false"
             android:gravity="center"
+            android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/right_guide"
             app:layout_constraintStart_toStartOf="@+id/left_guide"
             app:layout_constraintTop_toTopOf="@+id/horizontal_guide"
