--- a/app/src/main/res/layout/changelog_dialog.xml
+++ b/app/src/main/res/layout/changelog_dialog.xml
@@ -48,7 +48,7 @@
         android:paddingTop="2dp"
         android:paddingEnd="8dp"
         android:paddingBottom="2dp"
-        android:text="@string/solucionamos_el_problema"
+        android:text="@string/novedades"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/divider"
         app:layout_constraintHorizontal_bias="0.0"
