--- a/app/src/main/res/drawable-night/ic_round_date_range_24.xml
+++ b/app/src/main/res/drawable-night/ic_round_date_range_24.xml
@@ -1,10 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:tint="@color/colorSecondary"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="@color/colorSecondary"
-        android:pathData="M19,4h-1L18,3c0,-0.55 -0.45,-1 -1,-1s-1,0.45 -1,1v1L8,4L8,3c0,-0.55 -0.45,-1 -1,-1s-1,0.45 -1,1v1L5,4c-1.11,0 -1.99,0.9 -1.99,2L3,20c0,1.1 0.89,2 2,2h14c1.1,0 2,-0.9 2,-2L21,6c0,-1.1 -0.9,-2 -2,-2zM19,19c0,0.55 -0.45,1 -1,1L6,20c-0.55,0 -1,-0.45 -1,-1L5,9h14v10zM7,11h2v2L7,13zM11,11h2v2h-2zM15,11h2v2h-2z" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:tint="@color/colorSecondary" android:viewportWidth="24" android:viewportHeight="24">
+    <path android:fillColor="@color/colorSecondary" android:pathData="M19 4h-1V3c0-0.55-0.45-1-1-1s-1 0.45-1 1v1H8V3c0-0.55-0.45-1-1-1S6 2.45 6 3v1H5C3.89 4 3.01 4.9 3.01 6L3 20c0 1.1 0.89 2 2 2h14c1.1 0 2-0.9 2-2V6c0-1.1-0.9-2-2-2zm0 15c0 0.55-0.45 1-1 1H6c-0.55 0-1-0.45-1-1V9h14v10zM7 11h2v2H7zm4 0h2v2h-2zm4 0h2v2h-2z"/>
 </vector>
