--- a/app/src/main/res/drawable/ic_round_mode_night_24.xml
+++ b/app/src/main/res/drawable/ic_round_mode_night_24.xml
@@ -1,10 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:tint="@color/colorOnSecondary"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="@color/colorOnSecondary"
-        android:pathData="M11.93,2.3C9.89,1.8 7.91,1.95 6.16,2.58C5.44,2.84 5.25,3.8 5.85,4.29C8.08,6.12 9.5,8.89 9.5,12c0,3.11 -1.42,5.88 -3.65,7.71c-0.59,0.49 -0.42,1.45 0.31,1.7C7.2,21.79 8.33,22 9.5,22c6.05,0 10.85,-5.38 9.87,-11.6C18.76,6.48 15.78,3.24 11.93,2.3z" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:tint="@color/colorOnSecondary" android:viewportWidth="24" android:viewportHeight="24">
+    <path android:fillColor="@color/colorOnSecondary" android:pathData="M11.93 2.3C9.89 1.8 7.91 1.95 6.16 2.58 5.44 2.84 5.25 3.8 5.85 4.29 8.08 6.12 9.5 8.89 9.5 12c0 3.11-1.42 5.88-3.65 7.71-0.59 0.49-0.42 1.45 0.31 1.7C7.2 21.79 8.33 22 9.5 22c6.05 0 10.85-5.38 9.87-11.6-0.61-3.92-3.59-7.16-7.44-8.1z"/>
 </vector>
