--- a/app/src/main/res/drawable/ic_round_report_24.xml
+++ b/app/src/main/res/drawable/ic_round_report_24.xml
@@ -1,10 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:tint="@color/colorOnSecondary"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="@android:color/white"
-        android:pathData="M15.32,3L8.68,3c-0.26,0 -0.52,0.11 -0.7,0.29L3.29,7.98c-0.18,0.18 -0.29,0.44 -0.29,0.7v6.63c0,0.27 0.11,0.52 0.29,0.71l4.68,4.68c0.19,0.19 0.45,0.3 0.71,0.3h6.63c0.27,0 0.52,-0.11 0.71,-0.29l4.68,-4.68c0.19,-0.19 0.29,-0.44 0.29,-0.71L20.99,8.68c0,-0.27 -0.11,-0.52 -0.29,-0.71l-4.68,-4.68c-0.18,-0.18 -0.44,-0.29 -0.7,-0.29zM12,17.3c-0.72,0 -1.3,-0.58 -1.3,-1.3s0.58,-1.3 1.3,-1.3 1.3,0.58 1.3,1.3 -0.58,1.3 -1.3,1.3zM12,13c-0.55,0 -1,-0.45 -1,-1L11,8c0,-0.55 0.45,-1 1,-1s1,0.45 1,1v4c0,0.55 -0.45,1 -1,1z" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:tint="@color/colorOnSecondary" android:viewportWidth="24" android:viewportHeight="24">
+    <path android:fillColor="@android:color/white" android:pathData="M15.32 3H8.68c-0.26 0-0.52 0.11-0.7 0.29L3.29 7.98C3.11 8.16 3 8.42 3 8.68v6.63c0 0.27 0.11 0.52 0.29 0.71l4.68 4.68C8.16 20.89 8.42 21 8.68 21h6.63c0.27 0 0.52-0.11 0.71-0.29l4.68-4.68c0.19-0.19 0.29-0.44 0.29-0.71V8.68c0-0.27-0.11-0.52-0.29-0.71l-4.68-4.68C15.84 3.11 15.58 3 15.32 3zM12 17.3c-0.72 0-1.3-0.58-1.3-1.3s0.58-1.3 1.3-1.3 1.3 0.58 1.3 1.3-0.58 1.3-1.3 1.3zm0-4.3c-0.55 0-1-0.45-1-1V8c0-0.55 0.45-1 1-1s1 0.45 1 1v4c0 0.55-0.45 1-1 1z"/>
 </vector>
