Corrección de error de QuakeDetailsActivity.kt y eliminación del provider en small fragment
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/layout/ad_small_template.xml
+++ b/app/src/main/res/layout/ad_small_template.xml
@@ -23,17 +23,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/ad_store"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Store" />
-
         <com.appodeal.ads.NativeIconView
             android:id="@+id/ad_app_icon"
             android:layout_width="70dp"
@@ -51,9 +40,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="16dp"
             android:textAppearance="?attr/textAppearanceBody2"
-            app:layout_constraintEnd_toStartOf="@+id/ad_call_to_action"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/ad_app_icon"
             app:layout_constraintTop_toTopOf="@+id/ad_app_icon"
             tools:text="Test Ad: Google Ads" />
@@ -63,23 +52,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="16dp"
+            android:ellipsize="end"
             android:textSize="12sp"
-            app:layout_constraintEnd_toStartOf="@+id/ad_call_to_action"
+            android:maxLines="2"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/ad_app_icon"
             app:layout_constraintTop_toBottomOf="@+id/ad_title"
-            tools:text="Maximun flow rate: 2250GPH" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/ad_call_to_action"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="16dp"
-            android:text="@string/ver_m_s"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ad_title" />
+            tools:text="Adding this text to probe that Maximun flow rate: 2250GPH, this is the description of the ad publicity, you don't have to be dumb" />
 
 
         <androidx.appcompat.widget.AppCompatRatingBar
