--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -17,6 +17,13 @@
             app:title="@string/alert_pref_title_switch"
             app:useSimpleSummaryProvider="true" />
 
+        <SwitchPreferenceCompat
+            app:defaultValue="true"
+            app:iconSpaceReserved="true"
+            app:key="@string/high_priority_pref_key"
+            app:summary="@string/high_priority_summary"
+            app:title="@string/high_priority_title" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
