Implementación de menu de estado del servicio
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -18,8 +18,14 @@
         app:showAsAction="ifRoom|collapseActionView" />
 
     <item
-        android:id="@+id/settings_menu"
+        android:id="@+id/status_menu"
         android:orderInCategory="3"
+        android:title="@string/service_status"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/settings_menu"
+        android:orderInCategory="4"
         android:title="@string/settings"
         app:showAsAction="never" />
 
