--- a/app/src/main/res/layout/ad_small_template.xml
+++ b/app/src/main/res/layout/ad_small_template.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.appodeal.ads.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -23,7 +23,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.appodeal.ads.NativeIconView
+        <ImageView
             android:id="@+id/ad_app_icon"
             android:layout_width="70dp"
             android:layout_height="70dp"
@@ -81,4 +81,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</com.appodeal.ads.NativeAdView>
+</com.google.android.gms.ads.nativead.NativeAdView>
