--- a/app/src/main/res/layout/card_view_reports.xml
+++ b/app/src/main/res/layout/card_view_reports.xml
@@ -134,7 +134,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
-            android:text="@string/top_ciudades_con_m_s_sismos"
+            android:text="@string/top_ciudades"
             android:textAppearance="?attr/textAppearanceBody2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
