--- a/app/src/main/res/layout/fragment_quake.xml
+++ b/app/src/main/res/layout/fragment_quake.xml
@@ -11,6 +11,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <include
+            android:id="@+id/cv_alert_permission"
+            layout="@layout/card_view_notification_permission"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:visibility="gone"
+            ads:layout_constraintEnd_toEndOf="parent"
+            ads:layout_constraintStart_toStartOf="parent"
+            ads:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/tv_cache_copy"
             android:layout_width="0dp"
@@ -50,7 +63,7 @@
             android:layout_height="0dp"
             android:contentDescription="@string/seccion_listado_de_sismos"
             ads:layout_constraintBottom_toBottomOf="parent"
-            ads:layout_constraintTop_toBottomOf="@+id/tv_cache_copy"
+            ads:layout_constraintTop_toBottomOf="@+id/cv_alert_permission"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
