Root preference para politica de privacidad
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -82,6 +82,12 @@
         <Preference
             app:allowDividerAbove="true"
             app:iconSpaceReserved="true"
+            app:key="@string/privacy_policy_key"
+            app:title="@string/privacy_policy" />
+
+        <Preference
+            app:allowDividerAbove="true"
+            app:iconSpaceReserved="true"
             app:key="@string/contact_key"
             app:summary="@string/contact_summary"
             app:title="@string/contact_developer" />
