--- a/app/src/main/res/drawable/bottom_sheet_shape.xml
+++ b/app/src/main/res/drawable/bottom_sheet_shape.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/colorOnPrimary" />
+    <solid android:color="@color/colorOnSecondary" />
 
     <corners android:radius="8dp" />
 </shape>
