--- a/app/src/main/res/layout/quake_bottom_sheet.xml
+++ b/app/src/main/res/layout/quake_bottom_sheet.xml
@@ -4,12 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- TODO: Check de correct layout_height -->
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/bottom_sheet"
+        android:id="@+id/cv_bottom_sheet"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        app:behavior_peekHeight="50dp"
-        app:cardBackgroundColor="@color/badgeGreen"
+        android:layout_height="250dp"
+        app:behavior_peekHeight="90dp"
+        app:cardBackgroundColor="@color/colorSurface"
         app:cardElevation="16dp"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
@@ -28,6 +29,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <include
+                android:id="@+id/sheet_content"
+                layout="@layout/card_view_quake_bottom_sheet"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/swipe_line"
+                app:layout_constraintVertical_bias="0.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
