--- a/app/src/main/res/layout/card_view_quake_bottom_sheet.xml
+++ b/app/src/main/res/layout/card_view_quake_bottom_sheet.xml
@@ -51,18 +51,28 @@
         android:id="@+id/tv_reference"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="2dp"
         android:ellipsize="end"
         android:lines="1"
         android:maxLines="1"
-        android:textAppearance="?attr/textAppearanceCaption"
         android:textSize="11sp"
-        card_view:layout_constraintBottom_toBottomOf="@+id/iv_mag_color"
+        card_view:layout_constraintBottom_toBottomOf="@+id/iv_reference"
         card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintStart_toStartOf="@+id/tv_city"
-        card_view:layout_constraintTop_toBottomOf="@+id/tv_city"
-        card_view:layout_constraintVertical_bias="0.0"
+        card_view:layout_constraintStart_toEndOf="@+id/iv_reference"
+        card_view:layout_constraintTop_toTopOf="@+id/iv_reference"
         tools:text="Referencia de la ciudad" />
 
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="2dp"
+        android:gravity="center_vertical"
+        android:textSize="11sp"
+        card_view:layout_constraintBottom_toBottomOf="@+id/iv_date"
+        card_view:layout_constraintStart_toEndOf="@+id/iv_date"
+        card_view:layout_constraintTop_toTopOf="@+id/iv_date"
+        tools:text="1d 1h" />
 
     <ImageView
         android:id="@+id/iv_sensitive"
@@ -72,9 +82,30 @@
         android:contentDescription="@string/icono_sensible"
         android:visibility="invisible"
         card_view:layout_constraintBottom_toBottomOf="@+id/tv_city"
+        card_view:layout_constraintEnd_toEndOf="parent"
+        card_view:layout_constraintHorizontal_bias="0.0"
         card_view:layout_constraintStart_toEndOf="@+id/tv_city"
         card_view:layout_constraintTop_toTopOf="@+id/tv_city"
         card_view:srcCompat="@drawable/ic_round_warning_24"
         tools:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/iv_reference"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginStart="4dp"
+        android:contentDescription="Reference icon"
+        card_view:layout_constraintStart_toEndOf="@+id/tv_date"
+        card_view:layout_constraintTop_toBottomOf="@+id/tv_city"
+        card_view:srcCompat="@drawable/round_adjust_24" />
+
+    <ImageView
+        android:id="@+id/iv_date"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:contentDescription="Hour icon"
+        card_view:layout_constraintStart_toStartOf="@+id/tv_city"
+        card_view:layout_constraintTop_toBottomOf="@+id/tv_city"
+        card_view:srcCompat="@drawable/round_calendar_today_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
